--- a/qingguo/请求示例.md
+++ b/qingguo/请求示例.md
@@ -4,25 +4,25 @@
     @FormUrlEncoded
     @Headers({"Content-Type:application/x-www-form-urlencoded;"})
     Call<GreenFruitProfile> loginGreenFruit(@Field("param") String param,
-                                            @Field("appinfo") String appinfo,
                                             @Field("param2") String param2,
-                                            @Field("token") String token);
+                                            @Field("token") String token,
+                                            @Field("appinfo") String appinfo);
 
     @POST(UrlContacts.URL_QINGGUO)
     @FormUrlEncoded
     @Headers({"Content-Type:application/x-www-form-urlencoded;"})
     Call<GreenFruitCourse> getGreenFruitCourse(@Field("param") String param,
-                                               @Field("appinfo") String appinfo,
                                                @Field("param2") String param2,
-                                               @Field("token") String token);
+                                               @Field("token") String token,
+                                               @Field("appinfo") String appinfo);
 
     @POST(UrlContacts.URL_QINGGUO)
     @FormUrlEncoded
     @Headers({"Content-Type:application/x-www-form-urlencoded;"})
     Call<GreenFruitTerm> getGreenFruitTerm(@Field("param") String param,
-                                           @Field("appinfo") String appinfo,
                                            @Field("param2") String param2,
-                                           @Field("token") String token);
+                                           @Field("token") String token,
+                                           @Field("appinfo") String appinfo);
 ```
 
 ### 实体定义
@@ -704,7 +704,7 @@ public class GreenFruitTerm extends GreenFruitModel{
 public static void loginGreenFruit(Context context,String schoolId,String loginId,String password,Callback<GreenFruitProfile> callback) {
         TimetableService service=ApiUtils.getRetrofitForGreenFruit(context).create(TimetableService.class);
         GreenFruitParams params= ParamsManager.get(context).getLoginParams(schoolId,loginId,password);
-        Call<GreenFruitProfile> call=service.loginGreenFruit(params.getParam(),params.getAppinfo(),params.getParam2(),params.getToken());
+        Call<GreenFruitProfile> call=service.loginGreenFruit(params.getParam(),params.getParam2(),params.getToken(),params.getAppinfo());
         call.enqueue(callback);
     }
 
